Added ActiveMQ Docker image, comment out local server to use Docker; also show artemis web util page

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,14 @@ logging.level.com.blurdel.sfgjms.listener=ERROR
 
 # WARN
 logging.level.org.apache.activemq=ERROR 
+
+
+# https://github.com/vromero/activemq-artemis-docker
+# Docker image - ActiveMQ Artemis
+#docker run --name activemq -it --rm \
+#  -p 8161:8161 \
+#  -p 61616:61616 \
+#  vromero/activemq-artemis
+
+spring.artemis.user=artemis
+spring.artemis.password=simetraehcapa
