--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 # Turn off JMS chatter
 logging.level.com.blurdel.sfgjms.listener=ERROR
 
-# WARN
 logging.level.org.apache.activemq=ERROR 
+# WARN
 
 
 # https://github.com/vromero/activemq-artemis-docker
@@ -13,5 +13,8 @@ logging.level.org.apache.activemq=ERROR
 #  -p 61616:61616 \
 #  vromero/activemq-artemis
 
+
+
+# ActiveQM Utility Console when using Docker: http://127.0.0.1:8161
 spring.artemis.user=artemis
 spring.artemis.password=simetraehcapa
